fixed overflow x issue except mobile still does it a tiny bit

--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,5 @@ code {
 .app {
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden;
 }
